Bug Fix: adjust height spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -17,12 +17,13 @@ body {
 
 header {
 	width: 100%;
-	height: 12vh;
+	height: 12%;
+	min-height: 12vh;
 }
 
 .header_inner {
 	width: 100%;
-	height: 12vh;
+	height: inherit;
 	display: flex;
 	flex-wrap: wrap;
 }
@@ -94,7 +95,7 @@ header {
 
 nav {
 	width: 100%;
-	height: 5vh;
+	height: 39px;
 	display: flex;
 	flex-wrap: wrap;
 	background-color: black;
@@ -109,6 +110,7 @@ nav {
 	text-align: center;
 	color: #e9e5dc;
 	background: black;
+	border-bottom: thick solid black;
 }
 
 .nav_item h3 {
@@ -186,6 +188,7 @@ nav {
 
 main {
 	width: 100%;
+	height: 78%;
 	min-height: 78vh;
 }
 
@@ -431,5 +434,3 @@ footer h4 {
 		padding-right: 0px;
 	}
 }
-
-
